resources/banking-api/banking-api-deployment-old.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: banking-api-deployment
  namespace: null-space
  labels: 
    app: banking-api-app

spec: # Specifications for the Deployment!
  replicas: 3
  selector: 
    matchLabels: 
      app: banking-api-app # has to match the template labels app.
  template: 
    metadata: 
      labels: 
        app: banking-api-app
    spec:
      containers: 
        - name: banking-api-app-deployment
          image: ooido/banking-api
          ports:
            - containerPort: 7700
          imagePullPolicy: Always
