resources/banking-api/banking-api-ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: banking-api-ingress
  namespace: ooido-space
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec: 
  rules: 
    - http:
        paths: 
        - pathType: Prefix
          path: "/bapi/(.*)"
          backend: 
            service: 
              name: banking-api-service
              port: 
                number: 7700
